fix: remove preserve-3d from .side elements to fix Firefox backface-visibility
Firefox ignores backface-visibility: hidden when transform-style: preserve-3d
is set on the same element. The .side elements don't need preserve-3d since
their children (::after pseudo-elements for shadows) don't use 3D transforms.

--- a/css/sheet.css
+++ b/css/sheet.css
@@ -93,8 +93,6 @@
   background-position: center;
   background-size: cover;
 
-  transform-style: preserve-3d;
-  -webkit-transform-style: preserve-3d;
   /* Обе версии для кросс-браузерности */
   backface-visibility: hidden;
   -webkit-backface-visibility: hidden;
